@@ -82,6 +82,7 @@ family = "ipv4 ipv6"
 # reconnect = true	# (bool) optional, enable reconnection
 # reconnect-tries = 0	# (int) optional, number of tries max, 0 = indefinitely
 # reconnect-timeout = 5	# (int) optional, number of seconds to wait
+# auto-rejoin = false	# (bool) optional, automatically rejoin after a kick
 
 [server]
 identity = "default"
