@@ -7,7 +7,8 @@ CURRENT
   * New address system for irccd.socket,
   * Add new irccd.util.convert,
   * Add onQueryCommand new callback,
-  * Added more fields in Date:calendar.
+  * Added more fields in Date:calendar,
+  * Add option auto-rejoin to server.
 
 1.1.3 March 22, 2014
 ---------------------------------------
